# nx9-dns-server

./: Algorithm & Flowchart  Algorithm & Flowchart.md  Algorithm-Flowchart.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  Cargo.toml  Installation.md  README.md  README.txt  build-deb.sh  build-rpm.sh  contributing.md  deploy-dns-server.sh  deploy.sh  dns_dump.sh  dns_records.sql  dns_server.service  dns_wrapper.sh  dnscheck.sh  docker-compose.yml  install.sh  preprocess-key.sh  soa-update.sh  start.sh
Docker/: Dockerfile
Documents/: Custom Authoritative DNS Server for bzo.in.odt  code.odt  code.rtf
src/: cache.rs  config.rs  db.rs  dns.rs  error.rs  errors.rs  handlers.rs  lib.rs  main.rs  utils.rs
